--- a/src/App.scss
+++ b/src/App.scss
@@ -362,12 +362,12 @@ img {
 .home__robot {
     margin-top: 20%;
 
-    .home__robot__turtle {
+    &__turtle {
         margin-right: 60%;
         margin-bottom: 2%;
     }
 
-    .home__robot__text {
+    &__text {
         font-family: 'Barlow';
         font-size: 2.5vw;
         text-align: center;
@@ -554,7 +554,7 @@ model-viewer {
         margin-top: 10%;
         margin-bottom: 0%;
 
-        .home__robot__text {
+        &__text {
             margin-left: -22%;
             font-size: 15px;  
         }
