Sarah/9/update-website-layout
Ref #9

- added controllers and buttons
- dimensions are hardcoded atm
- still need to tweak arrows on button,
  might have to use images for all of them

--- a/src/Home.scss
+++ b/src/Home.scss
@@ -998,10 +998,13 @@ model-viewer {
     width: 50%;
 
     &__text {
-        margin-top: -10%;
-        margin-left: 25%;
+        margin-left: 2%;
+        position: relative;
+        bottom: 5vw;
         font-size: 3vw;
         text-align: left;
+        text-decoration: none;
+        color: black;
     }
 
     &__text:hover {
