--- a/src/Controls.scss
+++ b/src/Controls.scss
@@ -1,4 +1,178 @@
+
 .controls {
-    width: 100%;
-    height: 100vh;
+    background-color: #F6E2BC;
+
+    button:hover {
+        cursor: pointer;
+    }
+
+    &__connectionIndicators {
+        button {
+            width: 75px;
+            height: 75px;
+            background-color: #A38F6A;
+            border-radius: 50%;
+            border: 4px solid #C3B292;
+            background-repeat: no-repeat;
+            background-position: center;
+            margin: 20px;
+        }
+
+        &__ble {
+            background-image: url("/images/controller/ble.svg");
+            background-size: 30px;
+        }
+
+        &__wifi {
+            background-image: url("/images/controller/wifi.svg");
+            background-size: 40px;
+        }
+    }
+
+    &__clawOpenbtn {
+        width: 138px;
+        height: 63.28px;
+        font-family: Barlow;
+        font-size: 24px;
+        background-color: #F6E2BC;
+        border-radius: 20px;
+        border: 4px solid #C3B292;
+    }
+
+    &__bottomSection {
+        display: flex;
+        flex-flow: row;
+        justify-content: space-between;
+    }
 }
+
+.actionControls {
+
+    &__container {
+        position: relative;
+
+        .rs-control .rs-range-color {
+            background-color: #A9D09E;
+        }
+        .rs-control .rs-path-color {
+            background-color:  #A9D09E;
+        }
+        .rs-control .rs-handle {
+            background-color: #668963;
+        }
+        .rs-control .rs-bg-color {
+            background-color: #F6E2BC
+        }
+        .actionControls {
+            background-color: green;
+        }
+
+        &__btns {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            z-index: 3;
+            width: 270px;
+            height: 270px;  
+            border-radius: 50%;
+            background: rgba(222, 244, 216, 0.5);
+
+            button {
+                border-radius: 50%; 
+                height: 70px;
+                width: 70px;
+                background-color: #F6E2BC;
+                border: 4px solid #C3B292;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-image: url("/images/controller/arrow.svg");
+                background-size: 25px;
+            }
+
+            button:active {
+                background-color:  #C3B292;
+            }
+
+            &__up {
+                margin-top: 5%;
+            }
+
+            &__LR {
+                display: flex;
+                justify-content: space-around;
+                margin-top: 5%;
+                margin-bottom: 4%;
+                
+                &__left {
+                    transform: rotate(-90deg);
+                }
+
+                &__right {
+                    transform: rotate(90deg);
+                }
+            }
+
+            &__down {
+                transform: rotate(180deg);
+            }
+        }
+    }
+}
+
+
+
+.movementControls {
+    background-color: #A9D09E;
+    height: 287px;
+    width: 319px;
+    border-radius: 30px;
+    padding-top: 5px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    &__container {
+        padding-top: 10px;
+        &__btns {
+            button {
+                border-radius: 50%; 
+                height: 70px;
+                width: 70px;
+                background-color: #F6E2BC;
+                border: 4px solid #C3B292;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 30px ;
+            }
+
+            button:active {
+                background-color:  #C3B292;
+            }
+
+            &__up {
+                background-image: url("/images/controller/claw-up.svg");
+            }
+
+            &__LR 
+            {
+                display: flex;
+                justify-content: space-around;
+                margin-top: 7%;
+                margin-bottom: 8%;
+                
+                &__right {
+                    background-image: url("/images/controller/neck-right.svg");
+                }
+
+                &__left {
+                    background-image: url("/images/controller/neck-left.svg");
+                }
+            }
+
+            &__down {
+                background-image: url("/images/controller/claw-down.svg");
+            }
+        }
+    }   
+}
+
+
+
