--- a/src/Controls.scss
+++ b/src/Controls.scss
@@ -6,7 +6,16 @@
         cursor: pointer;
     }
 
-    &__connectionIndicators {
+    &__hero {
+        display: flex;
+        justify-content: space-between;
+        padding: 5%;
+
+        img {
+            width: 174px;
+            height: 174px;
+        }
+
         button {
             width: 75px;
             height: 75px;
@@ -15,17 +24,43 @@
             border: 4px solid #C3B292;
             background-repeat: no-repeat;
             background-position: center;
-            margin: 20px;
+            margin-right: 20px;
         }
 
-        &__ble {
-            background-image: url("/images/controller/ble.svg");
-            background-size: 30px;
+        &__video {
+            position: relative;
+            background-color: black;
+            width: 938px;
+            height: 466px;
+
+            p {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                left: 20px;
+                bottom: 20px;
+                font-family: 'Barlow';
+                font-size: 24px;
+                line-height: 29px;
+                background-color: #F6E2BC;
+                border: 3px solid #C3B292;
+                border-radius: 20px;
+                width: 84px;
+                height: 57px;
+            }
         }
 
-        &__wifi {
-            background-image: url("/images/controller/wifi.svg");
-            background-size: 40px;
+        &__icons {
+            &__ble {
+                background-image: url("/images/controller/ble.svg");
+                background-size: 30px;
+            }
+    
+            &__wifi {
+                background-image: url("/images/controller/wifi.svg");
+                background-size: 40px;
+            }
         }
     }
 
