Added Video Placeholder

--- a/src/Controls.scss
+++ b/src/Controls.scss
@@ -14,6 +14,7 @@
         img {
             width: 174px;
             height: 174px;
+            object-fit: contain;
         }
 
         button {
