Added in umbrella and moved over claw open button
Ref #15

- Added in a new div to help align umbrella underneath icons.

--- a/src/Controls.scss
+++ b/src/Controls.scss
@@ -15,6 +15,7 @@
             width: 174px;
             height: 174px;
             object-fit: contain;
+            margin-top: -29px;
         }
 
         button {
@@ -52,15 +53,26 @@
             }
         }
 
-        &__icons {
-            &__ble {
-                background-image: url("/images/controller/ble.svg");
-                background-size: 30px;
+        &__left {
+            &__icons {
+                display: flex;
+                margin-left: 15px;
+
+                &__ble {
+                    background-image: url("/images/controller/ble.svg");
+                    background-size: 30px;
+                }
+        
+                &__wifi {
+                    background-image: url("/images/controller/wifi.svg");
+                    background-size: 40px;
+                }
             }
-    
-            &__wifi {
-                background-image: url("/images/controller/wifi.svg");
-                background-size: 40px;
+
+            & > img {
+                margin-top: 140px;
+                width: 128px;
+                height: 123px;
             }
         }
     }
@@ -73,11 +85,14 @@
         background-color: #F6E2BC;
         border-radius: 20px;
         border: 4px solid #C3B292;
+        position: absolute;
+        right: 100px;
     }
 
     &__bottomSection {
         display: flex;
         justify-content: space-between;
+        margin-top: 100px;
 
         &__actionControls {
             margin-left: 1%;
