--- a/src/Controls.scss
+++ b/src/Controls.scss
@@ -1,234 +1,228 @@
-
 .controls {
-    background-color: #F6E2BC;
-    padding-bottom: 5%;
-    button:hover {
-        cursor: pointer;
+  background-color: #f6e2bc;
+  padding-bottom: 5%;
+  button:hover {
+    cursor: pointer;
+  }
+
+  &__hero {
+    display: flex;
+    justify-content: space-between;
+    padding: 5%;
+
+    img {
+      width: 174px;
+      height: 174px;
+      object-fit: contain;
+      margin-top: -29px;
     }
 
-    &__hero {
+    button {
+      width: 75px;
+      height: 75px;
+      background-color: #a38f6a;
+      border-radius: 50%;
+      border: 4px solid #c3b292;
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-right: 20px;
+    }
+
+    &__video {
+      position: relative;
+      background-color: black;
+      width: 938px;
+      height: 466px;
+
+      p {
         display: flex;
-        justify-content: space-between;
-        padding: 5%;
-
-        img {
-            width: 174px;
-            height: 174px;
-            object-fit: contain;
-            margin-top: -29px;
-        }
-
-        button {
-            width: 75px;
-            height: 75px;
-            background-color: #A38F6A;
-            border-radius: 50%;
-            border: 4px solid #C3B292;
-            background-repeat: no-repeat;
-            background-position: center;
-            margin-right: 20px;
-        }
-
-        &__video {
-            position: relative;
-            background-color: black;
-            width: 938px;
-            height: 466px;
-
-            p {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                position: absolute;
-                left: 20px;
-                bottom: 20px;
-                font-family: 'Barlow';
-                font-size: 24px;
-                line-height: 29px;
-                background-color: #F6E2BC;
-                border: 3px solid #C3B292;
-                border-radius: 20px;
-                width: 84px;
-                height: 57px;
-            }
-        }
-
-        &__left {
-            &__icons {
-                display: flex;
-                margin-left: 15px;
-
-                &__ble {
-                    background-image: url("/images/controller/ble.svg");
-                    background-size: 30px;
-                }
-        
-                &__wifi {
-                    background-image: url("/images/controller/wifi.svg");
-                    background-size: 40px;
-                }
-            }
-
-            & > img {
-                margin-top: 140px;
-                width: 128px;
-                height: 123px;
-            }
-        }
-    }
-
-    &__clawOpenbtn {
-        width: 138px;
-        height: 63.28px;
-        font-family: Barlow;
-        font-size: 24px;
-        background-color: #F6E2BC;
-        border-radius: 20px;
-        border: 4px solid #C3B292;
+        align-items: center;
+        justify-content: center;
         position: absolute;
-        right: 100px;
+        left: 20px;
+        bottom: 20px;
+        font-family: "Barlow";
+        font-size: 24px;
+        line-height: 29px;
+        background-color: #f6e2bc;
+        border: 3px solid #c3b292;
+        border-radius: 20px;
+        width: 84px;
+        height: 57px;
+      }
     }
 
-    &__bottomSection {
+    &__left {
+      &__icons {
         display: flex;
-        justify-content: space-between;
-        margin-top: 100px;
+        margin-left: 15px;
 
-        &__actionControls {
-            margin-left: 1%;
+        &__ble {
+          background-image: url("/images/controller/ble.svg");
+          background-size: 30px;
         }
 
-        &__movementControls {
-            margin-right: 1%;
+        &__wifi {
+          background-image: url("/images/controller/wifi.svg");
+          background-size: 40px;
         }
+      }
+
+      & > img {
+        margin-top: 140px;
+        width: 128px;
+        height: 123px;
+      }
     }
+  }
+
+  &__clawOpenbtn {
+    width: 138px;
+    height: 63.28px;
+    font-family: Barlow;
+    font-size: 24px;
+    background-color: #f6e2bc;
+    border-radius: 20px;
+    border: 4px solid #c3b292;
+    position: absolute;
+    right: 100px;
+  }
+
+  &__bottomSection {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+
+    &__actionControls {
+      margin-left: 1%;
+    }
+
+    &__movementControls {
+      margin-right: 1%;
+    }
+  }
 }
 
 .actionControls {
+  &__container {
+    position: relative;
 
-    &__container {
-        position: relative;
-
-        .rs-control .rs-range-color {
-            background-color: #A9D09E;
-        }
-        .rs-control .rs-path-color {
-            background-color:  #A9D09E;
-        }
-        .rs-control .rs-handle {
-            background-color: #668963;
-        }
-        .rs-control .rs-bg-color {
-            background-color: #F6E2BC
-        }
-        .actionControls {
-            background-color: green;
-        }
-
-        &__btns {
-            position: absolute;
-            top: 30px;
-            left: 30px;
-            z-index: 3;
-            width: 270px;
-            height: 270px;  
-            border-radius: 50%;
-            background: rgba(222, 244, 216, 0.5);
-
-            button {
-                border-radius: 50%; 
-                height: 70px;
-                width: 70px;
-                background-color: #F6E2BC;
-                border: 4px solid #C3B292;
-                background-repeat: no-repeat;
-                background-position: center;
-                background-image: url("/images/controller/arrow.svg");
-                background-size: 25px;
-            }
-
-            button:active {
-                background-color:  #C3B292;
-            }
-
-            &__up {
-                margin-top: 5%;
-            }
-
-            &__LR {
-                display: flex;
-                justify-content: space-around;
-                margin-top: 5%;
-                margin-bottom: 4%;
-                
-                &__left {
-                    transform: rotate(-90deg);
-                }
-
-                &__right {
-                    transform: rotate(90deg);
-                }
-            }
-
-            &__down {
-                transform: rotate(180deg);
-            }
-        }
+    .rs-control .rs-range-color {
+      background-color: #a9d09e;
     }
+    .rs-control .rs-path-color {
+      background-color: #a9d09e;
+    }
+    .rs-control .rs-handle {
+      background-color: #668963;
+    }
+    .rs-control .rs-bg-color {
+      background-color: #f6e2bc;
+    }
+    .actionControls {
+      background-color: green;
+    }
+
+    &__btns {
+      position: absolute;
+      top: 30px;
+      left: 30px;
+      z-index: 3;
+      width: 270px;
+      height: 270px;
+      border-radius: 50%;
+      background: rgba(222, 244, 216, 0.5);
+
+      button {
+        border-radius: 50%;
+        height: 70px;
+        width: 70px;
+        background-color: #f6e2bc;
+        border: 4px solid #c3b292;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-image: url("/images/controller/arrow.svg");
+        background-size: 25px;
+      }
+
+      button:active {
+        background-color: #c3b292;
+      }
+
+      &__up {
+        margin-top: 5%;
+      }
+
+      &__LR {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 5%;
+        margin-bottom: 4%;
+
+        &__left {
+          transform: rotate(-90deg);
+        }
+
+        &__right {
+          transform: rotate(90deg);
+        }
+      }
+
+      &__down {
+        transform: rotate(180deg);
+      }
+    }
+  }
 }
 
 .movementControls {
-    background-color: #A9D09E;
-    height: 287px;
-    width: 319px;
-    border-radius: 30px;
-    padding-top: 5px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: #a9d09e;
+  height: 287px;
+  width: 319px;
+  border-radius: 30px;
+  padding-top: 5px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-    &__container {
-        padding-top: 10px;
-        &__btns {
-            button {
-                border-radius: 50%; 
-                height: 70px;
-                width: 70px;
-                background-color: #F6E2BC;
-                border: 4px solid #C3B292;
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: 30px ;
-            }
+  &__container {
+    padding-top: 10px;
+    &__btns {
+      button {
+        border-radius: 50%;
+        height: 70px;
+        width: 70px;
+        background-color: #f6e2bc;
+        border: 4px solid #c3b292;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 30px;
+      }
 
-            button:active {
-                background-color:  #C3B292;
-            }
+      button:active {
+        background-color: #c3b292;
+      }
 
-            &__up {
-                background-image: url("/images/controller/claw-up.svg");
-            }
+      &__up {
+        background-image: url("/images/controller/claw-up.svg");
+      }
 
-            &__LR 
-            {
-                display: flex;
-                justify-content: space-around;
-                margin-top: 7%;
-                margin-bottom: 8%;
-                
-                &__right {
-                    background-image: url("/images/controller/neck-right.svg");
-                }
+      &__LR {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 7%;
+        margin-bottom: 8%;
 
-                &__left {
-                    background-image: url("/images/controller/neck-left.svg");
-                }
-            }
-
-            &__down {
-                background-image: url("/images/controller/claw-down.svg");
-            }
+        &__right {
+          background-image: url("/images/controller/neck-right.svg");
         }
-    }   
+
+        &__left {
+          background-image: url("/images/controller/neck-left.svg");
+        }
+      }
+
+      &__down {
+        background-image: url("/images/controller/claw-down.svg");
+      }
+    }
+  }
 }
-
-
-
