Practice HTML/CSS Login Submission Form
Ref #23

Associated CSS/HTML files for practice login submission form.

--- a/src/Demo.scss
+++ b/src/Demo.scss
@@ -1,3 +1,85 @@
-.text {
-    color: blue;
+.demo {
+    //margin: 500px 0px;
+    background-color: orange;
 }
+
+.flexbox-container-1 {
+    background-color: orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 800px;
+}
+
+
+.flexbox-item {
+    background-color: white;
+    display: flex; // flex direction - row or column based layout
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 390px;
+    margin: 5%;
+}
+
+.login-form {
+    color: black;
+    font-family: Tahoma, sans-serif;
+}
+
+.header {
+    font-weight: 850;
+    font-size: 16pt;
+    letter-spacing: 0.001px;
+    margin-top: 20px;
+}
+
+.other-text {
+    font-weight: medium;
+    font-size: 14pt;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.inputs {
+    height: 40px;
+    width: 300px;
+    background-color: rgb(250, 249, 249);
+    border-color:  rgb(214, 214, 214);
+}
+
+.email {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.pwd {
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+.btn {
+    height: 40px;
+    width: 300px;
+    margin-top: 7px;
+    background-color: #00aeffb6;
+    border:#00aeffb6; 
+    color:white;
+    margin-bottom: 7px;
+    font-weight: 600px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
