--- a/src/Controls.scss
+++ b/src/Controls.scss
@@ -9,7 +9,7 @@
     &__hero {
         display: flex;
         justify-content: space-between;
-        padding: 5%;
+        padding: 4% 2% 3% 2%;
 
         img {
             width: 174px;
@@ -77,22 +77,9 @@
         }
     }
 
-    &__clawOpenbtn {
-        width: 138px;
-        height: 63.28px;
-        font-family: Barlow;
-        font-size: 24px;
-        background-color: #F6E2BC;
-        border-radius: 20px;
-        border: 4px solid #C3B292;
-        position: absolute;
-        right: 100px;
-    }
-
     &__bottomSection {
         display: flex;
         justify-content: space-between;
-        margin-top: 100px;
 
         &__actionControls {
             margin-left: 1%;
@@ -142,9 +129,9 @@
                 background-color: #F6E2BC;
                 border: 4px solid #C3B292;
                 background-repeat: no-repeat;
-                background-position: center;
+                background-position: 13px 16px;
                 background-image: url("/images/controller/arrow.svg");
-                background-size: 25px;
+                background-size: 37px;
             }
 
             button:active {
@@ -184,7 +171,21 @@
     border-radius: 30px;
     padding-top: 5px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-
+    position: relative;
+    
+    &__clawBtn {
+        width: 157px;
+        height: 63.28px;
+        font-family: Barlow;
+        font-size: 24px;
+        background-color: #F6E2BC;
+        border-radius: 20px;
+        border: 4px solid #C3B292;
+        position: absolute;
+        right: 80px;
+        top: -100px;
+    }
+    
     &__container {
         padding-top: 10px;
         &__btns {
@@ -232,3 +233,238 @@
 
 
 
+// media queries IPAD
+
+@media (max-width: 1024px) {
+    .controls {
+        background-color: #F6E2BC;
+        padding-bottom: 5%;
+        button:hover {
+            cursor: pointer;
+        }
+
+        &__hero {
+            display: flex;
+            justify-content: space-between;
+            padding: 4% 2% 3% 2%;
+
+            img {
+                width: 174px;
+                height: 174px;
+                object-fit: contain;
+                margin-top: -29px;
+            }
+
+            button {
+                width: 75px;
+                height: 75px;
+                background-color: #A38F6A;
+                border-radius: 50%;
+                border: 4px solid #C3B292;
+                background-repeat: no-repeat;
+                background-position: center;
+                margin-right: 20px;
+            }
+
+            &__video {
+                position: relative;
+                background-color: black;
+                width: 938px;
+                height: 466px;
+
+                p {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: absolute;
+                    left: 20px;
+                    bottom: 20px;
+                    font-family: 'Barlow';
+                    font-size: 24px;
+                    line-height: 29px;
+                    background-color: #F6E2BC;
+                    border: 3px solid #C3B292;
+                    border-radius: 20px;
+                    width: 84px;
+                    height: 57px;
+                }
+            }
+
+            &__left {
+                &__icons {
+                    display: flex;
+                    margin-left: 15px;
+
+                    &__ble {
+                        background-image: url("/images/controller/ble.svg");
+                        background-size: 30px;
+                    }
+            
+                    &__wifi {
+                        background-image: url("/images/controller/wifi.svg");
+                        background-size: 40px;
+                    }
+                }
+
+                & > img {
+                    margin-top: 140px;
+                    width: 128px;
+                    height: 123px;
+                }
+            }
+        }
+
+        &__bottomSection {
+            display: flex;
+            justify-content: space-between;
+
+            &__actionControls {
+                margin-left: 1%;
+            }
+
+            &__movementControls {
+                margin-right: 1%;
+            }
+        }
+    }
+
+    .actionControls {
+
+        &__container {
+            position: relative;
+
+            .rs-control .rs-range-color {
+                background-color: #A9D09E;
+            }
+            .rs-control .rs-path-color {
+                background-color:  #A9D09E;
+            }
+            .rs-control .rs-handle {
+                background-color: #668963;
+            }
+            .rs-control .rs-bg-color {
+                background-color: #F6E2BC
+            }
+            .actionControls {
+                background-color: green;
+            }
+
+            &__btns {
+                position: absolute;
+                top: 15px;
+                left: 15px;
+                z-index: 3;
+                width: 250px;
+                height: 250px;  
+                border-radius: 50%;
+                background: rgba(222, 244, 216, 0.5);
+
+                button {
+                    border-radius: 50%; 
+                    height: 70px;
+                    width: 70px;
+                    background-color: #F6E2BC;
+                    border: 4px solid #C3B292;
+                    background-repeat: no-repeat;
+                    background-position: 13px 16px;
+                    background-image: url("/images/controller/arrow.svg");
+                    background-size: 37px;
+                }
+
+                button:active {
+                    background-color:  #C3B292;
+                }
+
+                &__up {
+                    margin-top: 5%;
+                }
+
+                &__LR {
+                    display: flex;
+                    justify-content: space-around;
+                    margin-top: 5%;
+                    margin-bottom: 4%;
+                    
+                    &__left {
+                        transform: rotate(-90deg);
+                    }
+
+                    &__right {
+                        transform: rotate(90deg);
+                    }
+                }
+
+                &__down {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+    }
+
+    .movementControls {
+        background-color: #A9D09E;
+        height: 287px;
+        width: 319px;
+        border-radius: 30px;
+        padding-top: 5px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+        position: relative;
+        
+        &__clawBtn {
+            width: 157px;
+            height: 63.28px;
+            font-family: Barlow;
+            font-size: 24px;
+            background-color: #F6E2BC;
+            border-radius: 20px;
+            border: 4px solid #C3B292;
+            position: absolute;
+            right: 80px;
+            top: -100px;
+        }
+        
+        &__container {
+            padding-top: 10px;
+            &__btns {
+                button {
+                    border-radius: 50%; 
+                    height: 70px;
+                    width: 70px;
+                    background-color: #F6E2BC;
+                    border: 4px solid #C3B292;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: 30px ;
+                }
+
+                button:active {
+                    background-color:  #C3B292;
+                }
+
+                &__up {
+                    background-image: url("/images/controller/claw-up.svg");
+                }
+
+                &__LR 
+                {
+                    display: flex;
+                    justify-content: space-around;
+                    margin-top: 7%;
+                    margin-bottom: 8%;
+                    
+                    &__right {
+                        background-image: url("/images/controller/neck-right.svg");
+                    }
+
+                    &__left {
+                        background-image: url("/images/controller/neck-left.svg");
+                    }
+                }
+
+                &__down {
+                    background-image: url("/images/controller/claw-down.svg");
+                }
+            }
+        }   
+    }  
+}
