--- a/src/Home.scss
+++ b/src/Home.scss
@@ -1008,7 +1008,7 @@ model-viewer {
     &__robot {
         position: absolute;
         z-index: 2;
-        right: 82px;
+        right: 122px;
         top: -24px;
         width: 140px;
 
@@ -1021,7 +1021,7 @@ model-viewer {
             transition: 0.5s;
 
             &:hover {
-                animation: pulse 3s;
+                animation: pulse2 3s;
                 top: -135px;
                 transition: 2s;
             }
@@ -1034,7 +1034,7 @@ model-viewer {
         background-repeat: no-repeat;
         height: 379px;
         margin: 0 auto;
-        max-width: 1100px;
+        max-width: 1200px;
         width: 100%;
         background-size: 1100px;
         z-index: 5;
@@ -1062,15 +1062,13 @@ model-viewer {
     &__list {
         background-color: #EAF6FC;
         width: 100%;
-        max-width: 1100px;
+        max-width: 1200px;
         margin: 0px auto;
         padding: 30px 0px;
         position: relative;
         z-index: 4;
         
         &__title {
-            background-image: url('/images/sponsorship/island-1-sponsorship.svg');
-            background-repeat: no-repeat;
             background-position: center;
             height: 223px;
             text-align: center;
@@ -1092,37 +1090,45 @@ model-viewer {
 
         &__item {
             display: flex;
-            margin: 0 auto;
+            flex-direction: column;
+            margin: 40px auto;
             width: fit-content;
             position: relative;
+            align-content: center;
 
-            &__image-1 {
-                width: 420px;
-                margin-right: 59px;
-            }
-            
-            &__image-2 {
-                width: 461px;
-                margin: auto;
-                margin-right: 76px;
+            &__image-1, &__image-2 {
+                width: 300px;
+                margin: 0px auto 40px;
             }
 
             &__description {
                 font-size: 20px;
-                line-height: 33.5px;
-                width: 717px;
+                line-height: 36px;
+                width: 100%;
+                height: 113px;
+                overflow: hidden;
+                margin: 30px 0px;
             }
 
             & > a {
                 text-align: left;
-                text-decoration: underline;
-                color: #6D95A8;
+                color: black;
+                font-weight: bold;
+                text-decoration: none;
+                padding: 10px;
+                width: fit-content;
+                border-radius: 10px;
+                background: #A9D09E;
+
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }
     }
 }
 
-@keyframes pulse {
+@keyframes pulse2 {
     33% {
         transform: rotate(35deg);
     }
@@ -1201,12 +1207,9 @@ model-viewer {
         }
     
         &__list {
-            width: 100%;
             padding: 50px 0px 0px;
 
             &__title {
-                background-position: center;
-                background-size: contain;
                 margin: 0 auto;
                 width: 90%;
                 height: 114px;
@@ -1225,25 +1228,16 @@ model-viewer {
             }
     
             &__item {
-                flex-direction: column;
                 width: 90%;
-                align-content: center;
-                margin: 0 auto;
 
                 &__image-1, &__image-2 {
-                    width: 300px;
                     margin: 0px auto 20px;
                 }
     
                 &__description {
                     font-size: 22px;
-                    line-height: 36px;
-                    width: 100%;
-                    margin-bottom: 20px;
                     height: 113px;
-                    overflow: hidden;
                 }
-
             }
         }
     }
@@ -1255,6 +1249,15 @@ model-viewer {
             &__item__description {
                 font-size: 18px;
             }
+        }
+    }
+}
+
+@media(max-width: 800px) {
+    .home__sponsorship {
+        &__list__item__image-1, 
+        &__list__item__image-2 {
+            width: 200px;
         }
     }
 }
@@ -1289,7 +1292,6 @@ model-viewer {
     font-weight: 300;
     margin: 15% 0 10% 25%;
     padding: 13% 0 19%;
-    cursor: pointer;
     width: 50%;
 
     &__text {
@@ -1304,6 +1306,7 @@ model-viewer {
 
     &__text:hover {
         opacity: 0.3;
+        cursor: pointer;
     }
 }
 
@@ -1342,10 +1345,12 @@ model-viewer {
         &__icons {
             &__links {
                 margin: 0 10px;
+                transition: 0.5s;
             }
 
             &__links:hover {
                 margin: 0 50px;
+                transition: 0.5s;
             }
         }
 
