--- a/src/Home.scss
+++ b/src/Home.scss
@@ -1122,6 +1122,7 @@ model-viewer {
 
                 &:hover {
                     cursor: pointer;
+                    color: rgba(0, 0, 0, 0.5);
                 }
             }
         }
